Network menu: Replace 'Other mobile' with 'Configure mobile'

The mobile network select UI has been integrated with the network
details UI. In the old network menu we do not have a way to view
the details UI so replace 'Other mobile network...' with
'Configure mobile network' and have it open the details UI which
is more generally useful anyway.

Bug: 809427
Change-Id: I93e013af35eaa8752940f6a95f56f1e6379d99ea
Reviewed-on: https://chromium-review.googlesource.com/907758
Reviewed-by: Ben Chan <benchan@chromium.org>
Reviewed-by: Alexander Alekseev <alemate@chromium.org>
Commit-Queue: Steven Bennetts <stevenjb@chromium.org>
Cr-Commit-Position: refs/heads/master@{#535238}
Former-commit-id: c62f99c279e42c3223030ecd1d9cbe5defbcfd07